-allow users to select profilers in the create job view   -create profilers table + model   -create RPCs for managing profilers   -modify control file generation code to accept profilers   -modify create job view -some refactoring to create job view to allow code sharing and do things more cleanly with some sweet generics -get rid of rpc_utils.sorted.  who knew there was a builtin?
git-svn-id: svn://test.kernel.org/autotest/trunk@1703 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -80,6 +80,8 @@
               <td id="create_client_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Server tests:</td>
               <td id="create_server_tests" colspan="2"></td></tr>
+          <tr><td class="field-name">Profilers:</td>
+              <td id="create_profilers" colspan="2"></td></tr>
           <tr><td colspan="3" id="create_edit_control"></td></tr>
           <tr>
             <td colspan="3" class="box">
