Adding a timeout field to the "Create Job" tab, modified the create_job RPC to handle a "timeout" argument, and added a "timeout" column to the AUTOTEST_WEB database. Sets how long a job should run until it is automatically aborted.

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -76,6 +76,8 @@
               <td id="create_priority"></td><td></td></tr>
           <tr><td class="field-name">Kernel:</td>
               <td id="create_kernel"></td><td></td></tr>
+          <tr><td class="field-name">Timeout (hours):</td>
+              <td id="create_timeout"></td></td></td></tr>
           <tr><td class="field-name">Client tests:</td>
               <td id="create_client_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Server tests:</td>
