Changing the Requeue Job button to redirect and populate the Create Job interface so that the user can modify the cloned job.

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -38,7 +38,7 @@
         </span><br><br>
         <div id="view_title" class="title"></div><br>
         <div id="view_data">
-          <span id="view_abort"></span><span id="view_requeue"></span><br>
+          <span id="view_abort"></span><span id="view_clone"></span><br>
           <span class="field-name">Label:</span>
           <span id="view_label"></span><br>
           <span class="field-name">Owner:</span>
