Added a new input that allows used to specify a one-time host when creating a job. The job will be run against that host once, and the host will not appear in the "Available hosts" selector.
Risk: medium (deleting records from database)
Visibility: medium (adding an input field)

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -89,6 +89,11 @@
             <td colspan="3" class="box">
               <table><tr>
                 <td>
+                  <div>
+                  <span class="field-name">One-time host:</span>
+                  <span id="create_one_time_field"></span>
+                  <span id="create_one_time_button"></span>
+                  </div>
                   <div class="box-full">
                     Run on any <span id="create_meta_select"></span><br>
                     Number: <span id="create_meta_number"></span>
