--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -136,6 +136,8 @@
           <span class="field-name">Locked:</span>
           <span id="view_host_locked"></span><br>
           <br>
+          <a id="view_host_logs_link" target="_blank">
+            View Verify/Repair Logs</a><br><br>
           <span class="field-name">Jobs for this host:</span>
           <div id="view_host_jobs_table"></div>
         </div>
