display timeout in the AFE job details tab
Signed-off-by: Steve Howard <showard@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -48,6 +48,8 @@
           <span id="view_priority"></span><br>
           <span class="field-name">Created:</span>
           <span id="view_created"></span><br>
+          <span class="field-name">Timeout:</span>
+          <span id="view_timeout"></span> hours<br>
           <span class="field-name">Status:</span>
           <span id="view_status"></span><br>
           
