Added a reset button to Create Job. Also reverted the behavior of refresh on Create Job to original behavior (does not reset form fields).
Risk: low
Visbility: medium (added UI element)

Signed-off-by: James Ren <jamesren@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -116,7 +116,10 @@
               </tr></table>
             </td>
           </tr>
-          <tr><td colspan="3" id="create_submit"></td></tr>
+          <tr>
+            <td id="create_submit"></td>
+            <td colspan="2" id="create_reset"></td>
+          </tr>
         </table>
       </div>
       
