One-time host control in Create Job now supports comma- and whitespace- separated lists of hosts.
Risk: low
Visibility: medium (UI functionality change)

Signed-off-by: James Ren <jamesren@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@1936 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -95,7 +95,7 @@
               <table><tr>
                 <td>
                   <div>
-                  <span class="field-name">One-time host:</span>
+                  <span class="field-name">One-time host(s):</span>
                   <span id="create_one_time_field"></span>
                   <span id="create_one_time_button"></span>
                   </div>
