Some AFE/TKO page layout changes: -shrink the logo and put all links on one line, to reduce wasted space at top of page -make the set of links the same on both AFE and TKO -reduce the links to normal-sized font Also fix the admin interface link from new TKO.

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -14,10 +14,14 @@
 
     
     <span class="links-box" style="float: right;">
-      <b>Links</b><br>
-      <a href="/afe">Autotest Frontend</a><br>
-      <a href="server/admin">Admin interface</a><br>
-      <a href="http://test.kernel.org/autotest">Documentation</a><br>
+      <a href="/afe">Frontend</a> |
+      <a href="/afe/server/admin">Admin interface</a> |
+      <a href="/tko">Results database</a>
+      (<b>new</b> interface!) |
+      <a href="http://test.kernel.org/autotest">Wiki</a> |
+      Feeds:
+      <a href="server/feeds/jobs/completed">Completed</a>,
+      <a href="server/feeds/jobs/failed">Failed</a>
     </span>
     <img src="header.png" />
     <br /><br />
