--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -12,13 +12,14 @@
 
 
     <span class="links-box" style="float: right;">
-      <b>Links</b><br>
-      <a href="server/admin">Admin interface</a><br>
-      <a href="/tko">Results database</a><br>
-      <a href="/new_tko">New results interface</a><br>
-      <a href="http://test.kernel.org/autotest">Documentation</a><br>
-      <a href="server/feeds/jobs/completed">Completed Jobs Feed</a><br>
-      <a href="server/feeds/jobs/failed">Failed Jobs Feed</a><br>
+      Frontend |
+      <a href="server/admin">Admin interface</a> |
+      <a href="/tko">Results database</a>
+      (<a href="/new_tko"><b>new</b> interface!</a>) |
+      <a href="http://test.kernel.org/autotest">Wiki</a> |
+      Feeds:
+      <a href="server/feeds/jobs/completed">Completed</a>,
+      <a href="server/feeds/jobs/failed">Failed</a>
     </span>
     <img src="header.png" />
     <br /><br />
