--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -86,10 +86,8 @@
               <td id="create_timeout"></td></td></td></tr>
           <tr><td class="field-name">Skip verify:</td>
               <td id="create_skip_verify"></td><td></td></tr>
-          <tr><td class="field-name">Client tests:</td>
-              <td id="create_client_tests" colspan="2"></td></tr>
-          <tr><td class="field-name">Server tests:</td>
-              <td id="create_server_tests" colspan="2"></td></tr>
+          <tr><td class="field-name">Tests:</td>
+              <td id="create_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Profilers:</td>
               <td id="create_profilers" colspan="2"></td></tr>
           <tr><td colspan="3" id="create_edit_control"></td></tr>
