-add easy invalidation functionality  -add "show invalidated tests" option to common panel, disabled by default  -made client submit "exclude_labels" option to exclude invalid tests.  this required somewhat widespread changes because it means the global condition is no longer just a SQL string but now a collection of parameters  -add "invalidate tests" option to spreadsheet/table context menu, and button to test detail view.  it's really just a shortcut to add the "invalidated" label.  -added logic to the server to handle "exclude_labels" option. it was done in this generic way because in the future i plan to add a UI to exclude any label or labels. -force test label names to be unique -fix a bug in logic to determine all labels assigned to a set of tests -got rid of auto-refresh when changing between spreadsheet and table after the condition had changed
Signed-off-by: Steve Howard <showard@google.com>

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -36,13 +36,14 @@
             <a href="http://test.kernel.org/autotest/TkoHowTo#filtering"
                target="_blank">Help</a>
             <span id="common_quick_reference"></span><br>
-            <div id="common_sql_input"></div>
+            <div id="common_filters"></div>
           </div>
         </div>
       </div>
       
       <div id="spreadsheet_view" title="Spreadsheet">
         <div id="ss_all_controls">
+          <span id="ss_filter_options"></span><br>
           <table><tr valign="top">
             <td class="field-name">Rows:</td>
             <td id="ss_row_select"></td>
