Change the "Wiki" links to point to the new trac page.
Risk: low
Visibility: low

Signed-off-by: James Ren <jamesren@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@2117 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -18,7 +18,7 @@
       <a href="/afe/server/admin">Admin interface</a> |
       <a href="/tko">Results database</a>
       (<b>new</b> interface!) |
-      <a href="http://test.kernel.org/autotest">Wiki</a> |
+      <a href="http://autotest.kernel.org">Wiki</a> |
       Feeds:
       <a href="server/feeds/jobs/completed">Completed</a>,
       <a href="server/feeds/jobs/failed">Failed</a>
