--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -16,7 +16,7 @@
       <a href="server/admin">Admin interface</a> |
       <a href="/tko">Results database</a>
       (<a href="/new_tko"><b>new</b> interface!</a>) |
-      <a href="http://test.kernel.org/autotest">Wiki</a> |
+      <a href="http://autotest.kernel.org">Wiki</a> |
       Feeds:
       <a href="server/feeds/jobs/completed">Completed</a>,
       <a href="server/feeds/jobs/failed">Failed</a>
