Added email_list field to front end. On job completion emails on this list will be notified of the completion. Also the function send_email in manage_db.py adds the ability to put a delimited email list in global_settings.py rather than just a single email.
Signed-off-by: Bryce Boe <bboe@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -52,6 +52,8 @@
           <span id="view_created"></span><br>
           <span class="field-name">Timeout:</span>
           <span id="view_timeout"></span> hours<br>
+          <span class="field-name">Email List:</span>
+          <span id="view_email_list"></span><br>
           <span class="field-name">Status:</span>
           <span id="view_status"></span><br>
 
@@ -84,6 +86,8 @@
               <td id="create_kernel"></td><td></td></tr>
           <tr><td class="field-name">Timeout (hours):</td>
               <td id="create_timeout"></td></td></td></tr>
+          <tr><td class="field-name">Email List:</td>
+              <td id="create_email_list"></td></td></td></tr>
           <tr><td class="field-name">Skip verify:</td>
               <td id="create_skip_verify"></td><td></td></tr>
           <tr><td class="field-name">Tests:</td>
