--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -33,7 +33,7 @@
           <div id="common_show_hide_controls" style="float: right"></div>
           <div id="common_all_controls">
             <span class="field-name">SQL filtering condition:</span>
-            <a href="http://test.kernel.org/autotest/TkoHowTo#filtering"
+            <a href="http://autotest.kernel.org/wiki/TkoHowTo#filtering"
                target="_blank">Help</a>
             <span id="common_quick_reference"></span><br>
             <div id="common_filters"></div>
