-added capability to have site-specific urlconfs in TKO Django server -added ClassFactory and SiteClassFactory to autotest.tko package to allow site-specific modifications to TKO.  made some changes to the AFE [Site]ClassFactory files (reducing visibility) -added get_detailed_test_views RPC which includes information about labels and attributes associated with a test -made changes to model_logic.py to make fewer assumptions about models.  these were basically bugs in model_logic.py that weren't exposed until i started doing fancier queries on TKO models. -made list_objects capable of accepting a field list -changed JsonRpcProxy to contain base URLs instead of full RPC urls; this way, other components (graphing, jlog) can use them (and i made graphing use this URL, which fixes a bug in the embedded URL generation) -added RealHyperlink widget to common.ui package, representing a plain old hyperlink to another page (as opposed to Hyperlink and SimpleHyperlink, which are intended to be handling by the GWT code).  this eases dynamic updates of the link href and allows setting visibility, styles, and all the other good stuff that comes along with using Widgets.

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -106,10 +106,12 @@
           <span id="td_platform"></span><br>
           <span class="field-name">Kernel:</span>
           <span id="td_kernel"></span><br>
+          <span class="field-name">Test labels:</span>
+          <span id="td_test_labels"></span><br>
           <br>
 
           <span class="field-name">Key log files:</span>
-          <a id="td_view_logs_link" target="_blank">(view all logs)</a>
+          <span id="td_view_logs_link"></span>
           <div id="td_log_files"></div>
         </div>
       </div>
