add test attributes to test detail view, in an expandable box

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -108,6 +108,7 @@
           <span id="td_kernel"></span><br>
           <span class="field-name">Test labels:</span>
           <span id="td_test_labels"></span><br>
+          <span id="td_attributes"></span><br>
           <br>
 
           <span class="field-name">Key log files:</span>
