Add options to control reboots before and after a job.
-add reboot_before and reboot_after fields to Job, along with enums for each
-add options to create_job RPC for reboot_before and reboot_after
-add options to job create CLI for these fields, and made job stat -v display them
-add widgets to job create page in AFE for these fields and made job detail view display them

-add dirty field to Hosts, defaulting to True, and set to True when a host is locked
-made scheduler set this field when a job runs and clear it when a host is rebooted

-updated scheduler's PidfileRunMonitor to read a new three-line .autoserv_execute format, where the third line contains the number of tests that failed
-made scheduler Job.run() include a RebootTask before the verify task according to the reboot_before option
-made QueueTask.epilog() launch a RebootTask for each host according to the reboot_after option

-updated autoserv to write out a third line to .autoserv_execute containing the number of failed tests.

Other changes:
-added support for displaying Job.run_verify in the CLI (job stat -v) and job detail page on AFE
-updated ModelExtensions to convert BooleanField values to actual booleans.  The MySQL Django backend just leaves them as ints (as they are represented in the DB), and it's stupid and annoying (Yes, bool is a subclass of int, so it's often not a problem.  But yes, it can be.).
-get rid of use of Job.synch_count since we don't actually support it.  I think this was meant for inclusion in a previous change and got left out.
-made the scheduler use the new setup_django_environment stuff to import and use the django models.  It doesn't *really* use the models yet -- it just uses the Job.Reboot{Before,After} enum objects -- but this shows we could easily start using the models, and that's definitely the direction I want to go long term.
-refactored PidfileRunMonitor generally and made it a bit more robust by having it email errors for corrupt pidfiles and continue graceful

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -52,6 +52,11 @@
           <span id="view_timeout"></span> hours<br>
           <span class="field-name">Email List:</span>
           <span id="view_email_list"></span><br>
+          <span class="field-name">Run verify:</span>
+          <span id="view_run_verify"></span><br>
+          <span class="field-name">Reboot options:</span>
+          <span id="view_reboot_before"></span> before job, 
+          <span id="view_reboot_after"></span> after job<br>
           <span class="field-name">Dependencies:</span>
           <span id="view_dependencies"></span><br>
           <span class="field-name">Status:</span>
@@ -90,6 +95,10 @@
               <td id="create_email_list"></td></td></td></tr>
           <tr><td class="field-name">Skip verify:</td>
               <td id="create_skip_verify"></td><td></td></tr>
+          <tr><td class="field-name">Reboot before:</td>
+              <td id="create_reboot_before"></td><td></td></tr>
+          <tr><td class="field-name">Reboot after:</td>
+              <td id="create_reboot_after"></td><td></td></tr>
           <tr><td class="field-name">Tests:</td>
               <td id="create_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Profilers:</td>
