Add user preferences for reboot options, including simple user preferences tab which could later be expanded to include more options.

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -162,6 +162,10 @@
           <div id="view_host_jobs_table"></div>
         </div>
       </div>
+      
+      <div id="user_preferences" title="User Preferences">
+        <div id="user_preferences_table"></div>
+      </div>
     </div>
     <br>
     <div id="error_log"></div>
