Add help link to create job tab and make it stand out.

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -82,6 +82,11 @@
       </div>
 
       <div id="create_job"  title="Create Job">
+        <div class="links-box" style="float: right">
+          <a href="http://autotest.kernel.org/wiki/WebFrontendHowTo#Createjobparameters">
+            Create Job Help
+          </a>
+        </div>
         <table class="form-table">
           <tr><td class="field-name">Job name:</td>
               <td id="create_job_name"></td><td></td></tr>
