Implement sync_count.  The primary change here is replacing the job.synch_type field with a synch_count field.  There is no longer just a distinction between synchronous and asynchronous jobs.  Instead, every job as a synch_count, with synch_count = 1 corresponding to the old concept of synchronous jobs.  This required: -changes to the job creation RPC and corresponding client code in AFE and the CLI -massive changes to the scheduler to schedule all jobs in groups based on synch_count (this unified the old synch and async code paths) -changed results directory structure to accomodate synchronous groups, as documented at http://autotest.kernel.org/wiki/SchedulerSpecification, including widespread changes to monitor_db and a change in AFE -changes to AFE abort code to handle synchronous groups instead of just synchronous jobs -also got rid of the "synchronizing" field in the jobs table, since I was changing the table anyway and it seems very likely now that that field will never be used
other changes included:
-add some logging to afe/models.py to match what the scheduler code does, since the scheduler is starting to use the models more
-added checks for aborts of synchronous groups to abort_host_queue_entries RPC

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -59,12 +59,13 @@
           <span id="view_reboot_after"></span> after job<br>
           <span class="field-name">Dependencies:</span>
           <span id="view_dependencies"></span><br>
+          <span class="field-name">Synchronization count:</span>
+          <span id="view_synch_count"></span><br>
           <span class="field-name">Status:</span>
           <span id="view_status"></span><br>
 
            <span class="field-name">
-             <span id="view_control_type"></span> control file
-             (<span id="view_synch_type"></span>):
+             <span id="view_control_type"></span> control file:
            </span>
           <pre><div id="view_control_file" class="box"></div></pre>
           <span class="field-name">
