Mention the profile_only=True flag for users to disable the first iteration.
Signed-off-by: Gregory Smith <gps@google.com>



git-svn-id: svn://test.kernel.org/autotest/trunk@2814 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -114,6 +114,10 @@
               <td id="create_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Profilers:</td>
               <td id="create_profilers" colspan="2"></td></tr>
+          <tr><td id="help" colspan="3">
+              NOTE: One non-profile iteration runs first by default.
+              Add profile_only=True to job.run_test() in the control file
+              if you do not want this.</td></tr>
           <tr><td colspan="3" id="create_edit_control"></td></tr>
           <tr>
             <td colspan="3" class="box">
