Improved embedded graphing sample -- use more generic, more interesting queries.
Signed-off-by: Steve Howard <showard@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@3088 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/EmbeddedTkoClientTest.html
+++ b/frontend/client/src/autotest/public/EmbeddedTkoClientTest.html
@@ -8,12 +8,13 @@
 
   <script type="text/javascript">
     function initialize() {
-      Autotest.initialize("http://localhost");
+      Autotest.initialize("http://autotest");
 
       var plot1 = Autotest.createMetricsPlot(document.getElementById("plot1_canvas"));
       queries = {}
-      queries["__main__"] = "SELECT kernel, AVG(iteration_value) 'throughput', STDDEV(iteration_value) 'errors-throughput' FROM perf_view_2 WHERE test_name like 'dbench%' AND iteration_key = 'throughput' GROUP BY kernel";
-      queries["__throughput__"] = "SELECT test_idx, iteration_value FROM perf_view_2 WHERE test_name like 'dbench%%' AND iteration_key = 'throughput' AND kernel = %s ORDER BY iteration_value";
+      queries["__main__"] = "SELECT test_name, AVG(IF(kernel LIKE '2.6.11%', iteration_value, NULL)) '2.6.11', STDDEV(IF(kernel LIKE '2.6.11%', iteration_value, NULL)) 'errors-2.6.11', AVG(IF(kernel LIKE '2.6.18%', iteration_value, NULL)) '2.6.18', STDDEV(IF(kernel LIKE '2.6.18%', iteration_value, NULL)) 'errors-2.6.18' FROM perf_view_2 WHERE test_idx < 1000 AND test_name IN ('dbench', 'tbench') AND iteration_key = 'throughput' AND (kernel LIKE '2.6.11%' OR kernel LIKE '2.6.18%') GROUP BY test_name";
+      queries["__2.6.11__"] = "SELECT test_idx, iteration_value FROM perf_view_2 WHERE test_idx < 1000 AND test_name IN ('dbench', 'tbench') AND iteration_key = 'throughput' AND kernel LIKE '2.6.11%%' AND test_name = %s ORDER BY iteration_value";
+      queries["__2.6.18__"] = "SELECT test_idx, iteration_value FROM perf_view_2 WHERE test_idx < 1000 AND test_name IN ('dbench', 'tbench') AND iteration_key = 'throughput' AND kernel LIKE '2.6.18%%' AND test_name = %s ORDER BY iteration_value";
       plot1.refresh({
           plot : "Bar",
           invert : [],
@@ -22,8 +23,8 @@
 
       var plot2 = Autotest.createMetricsPlot(document.getElementById("plot2_canvas"));
       queries = {}
-      queries["__main__"] = "SELECT job_tag, AVG(iteration_value) 'throughput', STDDEV(iteration_value) 'errors-throughput' FROM perf_view_2 WHERE test_name like 'dbench%' AND iteration_key ='throughput' GROUP BY job_tag";
-      queries["__throughput__"] = "SELECT test_idx, iteration_value FROM perf_view_2 WHERE test_name like 'dbench%%' AND iteration_key ='throughput' AND job_tag = %s ORDER BY iteration_value";
+      queries["__main__"] = "SELECT kernel, AVG(iteration_value) 'throughput', STDDEV(iteration_value) 'errors-throughput' FROM perf_view_2 WHERE test_idx < 1000 AND test_name = 'dbench' AND iteration_key ='throughput' GROUP BY kernel";
+      queries["__throughput__"] = "SELECT test_idx, iteration_value FROM perf_view_2 WHERE test_idx < 1000 AND test_name = 'dbench' AND iteration_key ='throughput' AND kernel = %s ORDER BY iteration_value";
       plot2.refresh({
           plot : "Line",
           invert : [],
