--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -69,6 +69,8 @@
           <span class="field-name">Reboot options:</span>
           <span id="view_reboot_before"></span> before job,
           <span id="view_reboot_after"></span> after job<br>
+          <span class="field-name">Include failed repair results:</span>
+          <span id="view_parse_failed_repair"></span><br>
           <span class="field-name">Dependencies:</span>
           <span id="view_dependencies"></span><br>
           <span class="field-name">Synchronization count:</span>
@@ -117,6 +119,8 @@
               <td id="create_reboot_before"></td><td></td></tr>
           <tr><td class="field-name">Reboot after:</td>
               <td id="create_reboot_after"></td><td></td></tr>
+          <tr><td class="field-name">Include failed repair results:</td>
+              <td id="create_parse_failed_repair"></td><td></td></tr>
           <tr><td class="field-name">Tests:</td>
               <td id="create_tests" colspan="2"></td></tr>
           <tr><td class="field-name">Profilers:</td>
