Add job maximum runtime, a new per-job timeout that counts time since the job actually started. * added started_on field to host_queue_entries, so that we could actually compute this timeout * added max_runtime_hrs to jobs, with default in global config, and added option to create_job() RPC * added the usual controls to AFE and the CLI for the new job option * added new max runtime timeout method to * added migration to add new fields and set a safe default max runtime for existing jobs
Signed-off-by: Steve Howard <showard@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@3132 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -62,6 +62,8 @@
           <span id="view_created"></span><br>
           <span class="field-name">Timeout:</span>
           <span id="view_timeout"></span> hours<br>
+          <span class="field-name">Max runtime:</span>
+          <span id="view_max_runtime"></span> hours<br>
           <span class="field-name">Email List:</span>
           <span id="view_email_list"></span><br>
           <span class="field-name">Run verify:</span>
@@ -111,6 +113,8 @@
               <td id="create_kernel"></td><td></td></tr>
           <tr><td class="field-name">Timeout (hours):</td>
               <td id="create_timeout"></td></td></td></tr>
+          <tr><td class="field-name">Max runtime (hours):</td>
+              <td id="create_max_runtime"></td></td></td></tr>
           <tr><td class="field-name">Email List:</td>
               <td id="create_email_list"></td></td></td></tr>
           <tr><td class="field-name">Skip verify:</td>
