--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Autotest Frontend</title>
-    <script language='javascript' src='autotest.AfeClient.nocache.js'>
+    <script type='text/javascript' src='autotest.AfeClient.nocache.js'>
     </script>
   </head>
 
