Add ability to lock/unlock a host from the AFE View Host tab.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -178,7 +178,7 @@
         <span id="view_host_fetch" class="box-full">Fetch host:
           <span id="view_host_fetch_controls"></span>
         </span><br><br>
-        <div id="view_host_title" class="title"></div><br>
+        <div id="view_host_title" class="title"></div>
         <div id="view_host_data">
           <span class="field-name">Platform:</span>
           <span id="view_host_platform"></span><br>
@@ -189,7 +189,8 @@
           <span class="field-name">Status:</span>
           <span id="view_host_status"></span><br>
           <span class="field-name">Locked:</span>
-          <span id="view_host_locked"></span><br>
+          <span id="view_host_locked"></span>
+          <span id="view_host_lock_button"></span><br>
           <br>
           <a id="view_host_logs_link" target="_blank">
             View Verify/Repair Logs</a><br><br>
