Allow all TestView fields to be displayed in cell contents in Spreadsheet View.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>

http://test.kernel.org/cgi-bin/mailman/listinfo/autotest

--- a/frontend/client/src/autotest/public/TkoClient.html
+++ b/frontend/client/src/autotest/public/TkoClient.html
@@ -45,14 +45,15 @@
       
       <div id="spreadsheet_view" title="Spreadsheet">
         <div id="ss_all_controls">
-          <span id="ss_filter_options"></span><br>
-          <table><tr valign="top">
+          <span id="ss_filter_options"></span>
+          <table class="box"><tr valign="top">
             <td class="field-name">Rows:</td>
             <td id="ss_row_select"></td>
             <td class="field-name">Columns:</td>
             <td id="ss_column_select"></td>
             <td id="ss_swap"></td>
           </tr></table>
+          <span id="ss_additional_content"></span>
           <span id="ss_query_controls"></span><br>
         </div>
         
