Allow hosts to be reverified from the AFE Host Details view.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -179,6 +179,7 @@
           <span id="view_host_fetch_controls"></span>
         </span><br><br>
         <div id="view_host_title" class="title"></div>
+        <div id="view_host_reverify_button"></div>
         <div id="view_host_data">
           <span class="field-name">Platform:</span>
           <span id="view_host_platform"></span><br>
