Show host protection level in host detail view.
Signed-off-by: Steve Howard <showard@google.com>

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -192,6 +192,8 @@
           <span class="field-name">Locked:</span>
           <span id="view_host_locked"></span>
           <span id="view_host_lock_button"></span><br>
+          <span class="field-name">Protection level:</span>
+          <span id="view_host_protection"></span>
           <br>
           <a id="view_host_logs_link" target="_blank">
             View Verify/Repair Logs</a><br><br>
