Make control file hidden by default on the AFE Job Detail view.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>


git-svn-id: svn://test.kernel.org/autotest/trunk@3262 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/frontend/client/src/autotest/public/AfeClient.html
+++ b/frontend/client/src/autotest/public/AfeClient.html
@@ -82,10 +82,7 @@
           <span class="field-name">Status:</span>
           <span id="view_status"></span><br>
 
-           <span class="field-name">
-             <span id="view_control_type"></span> control file:
-           </span>
-          <pre><div id="view_control_file" class="box"></div></pre>
+          <div id="view_control_file"></div><br>
           <span class="field-name">
             Full results
             <a id="old_results_link" target="_blank">(open in new window)</a>
